# edge-maxxing-sep-d8

./: pyproject.toml  requirements.txt
src/: pipeline.py
src/config/: scheduler_config.json
